--- a/style.css
+++ b/style.css
@@ -1,68 +1,83 @@
 body {
-    font-family: 'Zilla Slab', serif;
-    padding: 5%;
-    margin: 0;
+    font-family: 'Quicksand', sans-serif;
 }
 
-.page {
+header {
     display: grid;
-    width: 100%;
-}
-
-/* .decoration img {
-    width: 100%;
-    height: 205px;
-    object-fit: cover;
-} */
-
-h1, h3 {
-    text-align: center;
-}
-
-h1 {
-    font-weight: 550;
-}
-h3 {
-    font-weight: 400;
-}
-
-.to-do {
-    display: flex;
-    margin: 10px;
-}
-
-.time {
-    width: 20%;
-}
-
-#submit {
-    width: 10%;
-    height: 25px;
-    background:white;
-    margin-bottom: 10px;
-    font-size: 17px;
-    text-align: center;
-    border: 1px solid grey;
+    grid-template-columns: 1fr 1fr 2.8fr;
+    grid-template-rows: 200px;
+    border: 2px solid black;
     border-radius: 5px;
 }
 
-.to-do-field {
+.date-div {
+    margin: auto;
+}
+
+.date {
+    font-size: 55px;
+}
+
+.weekday-month-year {
+    margin: auto 0;
+}
+
+.decoration {
+    background: url(image.jpg);
+    background-repeat: repeat;
+    background-size: auto 100%;
+}
+
+main {
+    margin-top: 5%;
+    display: grid;
+}
+
+.to-do-div {
+    height: 50px;
+    display: flex;
+    margin: 1%;
+}
+
+.time {
+    width: 13%;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.todo-text {
     width: 70%;
-
-    border: none;
-    border-bottom: 1px solid black;
-    font-size: 16px;
-}
-
-input:focus {
-    outline: none;
-}
-
-#submit:hover {
-   cursor: pointer;
-}
-
-#submit:active {
+    border: 1px solid black;
+    border-radius: 3px;
+    font-size: 15px;
+    padding: 10px;
     background-color: white;
-    
 }
+.todo-text:active {
+    background-color: white;
+}
+
+.todo-text:focus, .submit:focus {
+    outline: none;
+    background-color: white;
+}
+
+.submit {
+    width: 7%;
+    margin-left: 2%;
+    border: 1px solid black;
+    border-radius: 3px;
+    font-size: 15px;
+    background: none;
+}
+
+.submit:hover {
+    cursor: pointer;
+}
+
+.submit:active {
+    transform: translateY(3px); 
+}
+
+
+
